--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "firebase": "^12.8.0",
     "framer-motion": "^12.26.2",
     "lucide-react": "^0.294.0",
     "qrcode": "^1.5.3",
